# ChemBioMultimodalAutoencoders

./: .flake8  .gitignore  LICENSE  README.md  environment.yml  hatch.toml  license.txt  pyproject.toml  setup.py
.github/: python-package-test.yml
.github/workflows/: build-and-publish.yml  python-package-test.yml  python-package-tests.yml
examples/: advanced_usage.ipynb  basic_usage.ipynb
multimodal_autoencoders/: joint_trainer.py
multimodal_autoencoders/base/: __init__.py  autoencoder.py  base_dataset.py  base_model.py
multimodal_autoencoders/data_loader/: datasets.py
multimodal_autoencoders/model/: classifiers.py  decoders.py  encoders.py  metric.py
tests/: conftest.py  test_autoencoders.py  test_classifiers.py  test_dataloaders.py  test_pytorch.py  test_trainer.py
